make tests for design patterns, refactor code
remove dependency for parent Frame from SlideViewerComponent and added getters and setters, made SlideViewerFrame an observer as it must be repainted after slide change, removed dependency for parent from Presentation, moved SlideViewerComponent and SlideViewerFrame creation and subscription for notification to JabberPoint